<?xml version="1.0"?>
<package format="2">
  <name>bynav_gps_msgs</name>
  <version>3.9.0</version>
  <description>
  Messages for proprietary (non-NMEA) sentences from Bynav GPS receivers.
  </description>

  <maintainer email="support@flywave.net">aninggo</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/flywave/bynav_gps_driver</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
